--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -2942,7 +2942,23 @@
     "\n",
     "Uma vez que está sendo comparado dois parâmetros, a hipótese nula neste caso irá acontecer se for identificada uma diferença significativa entre os mesmos quando realizado o ttest, contudo, se não for verificada tal diferença iremos descartar a hipótese nula e nos basear na hipótese alternativa que será não ter uma grande diferença.\n",
     "\n",
-    "Foram feitos dois testes, pois verificamos duas situações diferentes: ambos os testes foram utilizadas as classificações médias dos usuários, sendo no primeiro teste os parâmetros utilizados as plataformas Xbox One (XOne) / PC e no segundo teste os gêneros de jogos Action (ação) / Sports (esportes)."
+    "Foram feitos dois testes, pois verificamos duas situações diferentes: ambos os testes foram utilizadas as classificações médias dos usuários, sendo no primeiro teste os parâmetros utilizados as plataformas Xbox One (XOne) / PC e no segundo teste os gêneros de jogos Action (ação) / Sports (esportes).\n",
+    "\n",
+    "For the 2017 campaign, based on the data analyzed, I leave the following observations:\n",
+    "\n",
+    "- Genres to have attention:\n",
+    "\n",
+    "    - Action (top 1 in 2 regions and top 2 in the other)\n",
+    "    - Shooter (top 2 in 2 regions)\n",
+    "    - Role-Playing (top 1 in JP, top 4 in EU and top 5 in NA)\n",
+    "    - Misc (top 3 in JP, top 4 in NA and top 5 in EU)\n",
+    "    - Sports (top 3 in two regions)\n",
+    "\n",
+    "- Platforms to have attention:\n",
+    "\n",
+    "    - XOne and PS4 - Newly launched platforms that are experiencing good growth\n",
+    "    - X360 and PS3 - Platforms that have already been consolidated and continue to sell well\n",
+    "    - PC - Possible sales growth based on data"
    ]
   },
   {
@@ -2958,7 +2974,23 @@
    "source": [
     "Conseguimos identificar que existem diferenças significativas nas classificações dos usuários, como por exemplo entre Xbox One (XOne) e PC, além de também existir a mesma diferença quando falamos de gênero. Além disso, podemos verificar que jogos com classificação boa por parte dos críticos tem boas vendas, contudo, quando analisado esse quesito pela classificação dos usuários vemos que existe uma melhor distribuição das vendas de modo geral podendo então concluir que não será a nota do jogo que definirá se será um sucesso de venda.\n",
     "\n",
-    "Foi possível notar também que as plataformas quando são recém lançadas não tem um grande volume de venda de jogos quanto plataformas que já estavam no mercado, porém tem grande potencial de crescimento devendo ser o foco para os anos seguintes. Ainda neste assunto, percebemos que plataformas muito antigas e que eram um sucesso foram perdendo forças durante os anos e até mesmo \"sumindo\" do cenário das vendas."
+    "Foi possível notar também que as plataformas quando são recém lançadas não tem um grande volume de venda de jogos quanto plataformas que já estavam no mercado, porém tem grande potencial de crescimento devendo ser o foco para os anos seguintes. Ainda neste assunto, percebemos que plataformas muito antigas e que eram um sucesso foram perdendo forças durante os anos e até mesmo \"sumindo\" do cenário das vendas.\n",
+    "\n",
+    "Sendo assim, para a campanha de 2017, com base nos dados analisados, deixo as seguintes observações:\n",
+    "\n",
+    "- Gêneros para ter uma atenção:\n",
+    "\n",
+    "    - Action (top 1 em 2 regiões e top 2 na outra)\n",
+    "    - Shooter (top 2 em 2 regiões)\n",
+    "    - Role-Playing (top 1 em JP, top 4 em EU e top 5 em NA)\n",
+    "    - Misc (top 3 em JP, top 4 em NA e top 5 em EU)\n",
+    "    - Sports (top 3 em duas regiões)\n",
+    "\n",
+    "- Plataformas para ter atenção:\n",
+    "\n",
+    "    - XOne e PS4 - Plataformas recém lançadas e que estão com bom crescimento\n",
+    "    - X360 e PS3 - Plataformas já consolidadas e continuam com bons números de venda\n",
+    "    - PC - Possível crescimento de vendas com base nos dados"
    ]
   }
  ],
