Updating finished EDA

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,10 +19,16 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy.stats import ttest_ind\n",
     "\n",
-    "# reading the data in the VSCode below / leitudas dados no VSCode abaixo:\n",
+    "# reading the data in the VSCode below direct from local file / leitudas dados no VSCode abaixo diretamente do arquivo local:\n",
     "# after checking the data, sep = ',' was added to make the data display more organized / após verificação dos dados, foi adicionado o sep = ',' para deixar a visualização dos dados mais organizada\n",
     "\n",
     "df_games = pd.read_csv(r'C:\\Users\\Rafael\\Desktop\\Rafael\\Bootcamp\\Bootcamp-Projects\\Bootcamp-Projects-Github\\Bootcamp-Project-Video-Games-Ice-Company\\games.csv', sep = ',')\n",
+    "\n",
+    "# two lines below were added to read the data directly from github / linhas abaixo foram adicionadas para ler os dados diretamente do github\n",
+    "\n",
+    "# url = 'https://raw.githubusercontent.com/RafaelGenari/Bootcamp-Project-Video-Games-Ice-Company/blob/main/games.csv'\n",
+    "# df_games = pd.read_csv(url, sep = ',')\n",
+    "\n",
     "\n",
     "# reading the datasets in DataFrames / leitura dos conjuntos de dados em DataFrames\n",
     "\n",
