Updating finished EDA

--- a/Notebooks/EDA.ipynb
+++ b/Notebooks/EDA.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "https://github.com/RafaelGenari/Bootcamp-Project-Video-Games-Ice-Company"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step 1/2. Data organization and preparation / Etapa 1/2. Organização e preparação dos dados"
    ]
   },
